# photoshoot

./: LICENSE  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json
docs/: index.md
src/photoshoot/: __init__.py  comp.py  core.py  plugin.py  utils.py
src/photoshoot/storage/: __init__.py  gcs.py  local.py
tests/: test__comp.py  test__core.py  test__plugin.py  test__utils.py
tests/storage/: test__gcs.py  test__local.py
