[project]
name = "photoshoot"
version = "0.1.0"
description = "A pytest plugin for snapshot testing polars dataframes."
dependencies = ["polars>=1.5.0", "pytest>=8.3.2"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest>=8.3.2", "pytest-cov>=5.0.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/photoshoot"]

[project.urls]
Repository = "https://github.com/ngriffiths13/photoshoot"
[project.entry-points.pytest11]
pl-snapshot = "photoshoot.plugin"

[project.optional-dependencies]
gcs = ["gcsfs>=2024.6.1"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    'A003',
    'ANN101',
    'ANN401',
    'C901',
    'COM812',
    'D100',
    'D103',
    'D104',
    'D105',
    'D107',
    'D203',
    'D212',
    'DTZ',
    'E501',
    'FIX',
    'ISC001',
    'PD',
    'PLR0911',
    'PLR0912',
    'PLR5501',
    'PLR2004',
    'PT011',
    'PTH',
    'RET505',
    'S',
    'SLF001',
    'TD',
    'TRY004',
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]

# Exclude a variety of commonly ignored directories.
exclude = [
    "tests",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    ".ipynb",
    "venv",
]
line-length = 88
